--- a/app.css
+++ b/app.css
@@ -15,7 +15,7 @@ body {
   #panel .jumbotron {
     min-width: 60%; }
 
-.col-md-4 {
+.col-xs-4 {
   border: 1px solid black;
   padding: 20px;
   height: 60px;
